<resources>
    <string name="LIB_GCM_PREF_CATEGORY1_TITLE">Settings</string>
    <string name="LIB_GCM_PREF_KEY_WILLSENDNOTIFICATION">lib_gcm_willSendNotification</string>
    <string name="LIB_GCM_PREF_KEY_WILLSENDNOTIFICATION_TITLE">Send me notifications</string>
    <string name="LIB_GCM_PREF_CATEGORY2_TITLE">Details</string>
    <string name="LIB_GCM_PREF_KEY_WILLPLAYSOUND">lib_gcm_willPlaySound</string>
    <string name="LIB_GCM_PREF_KEY_WILLPLAYSOUND_SUMMARY">Play sound when notifications come</string>
    <string name="LIB_GCM_PREF_KEY_WILLPLAYSOUND_TITLE">Sound</string>
    <string name="LIB_GCM_PREF_KEY_WILLVIBRATE">lib_gcm_willVibrate</string>
    <string name="LIB_GCM_PREF_KEY_WILLVIBRATE_SUMMARY">Vibration feedback for notifications</string>
    <string name="LIB_GCM_PREF_KEY_WILLVIBRATE_TITLE">Vibrate</string>
    <string name="LIB_GCM_GOOGLE_ACCOUNT_MISSING_INFO">Please login with your Google Account.</string>
    <string name="LIB_GCM_PREF_CATEGORY3_TITLE">Development</string>
    <string name="LIB_GCM_PREF_KEY_IS_TESTING">lib_gcm_is_testing</string>
    <string name="LIB_GCM_PREF_KEY_IS_TESTING_SUMMARY_TURE">In parameters url, test=1</string>
    <string name="LIB_GCM_PREF_KEY_IS_TESTING_SUMMARY_FALSE">In parameters url, test=0</string>
    <string name="LIB_GCM_PREF_KEY_IS_TESTING_TITLE">is testing</string>
    <string name="LIB_GCM_PREF_KEY_DOES_INCLUDE_SANDBOX">lib_gcm_does_include_sandbox</string>
    <string name="LIB_GCM_PREF_KEY_DOES_INCLUDE_SANDBOX_SUMMARY_TURE">url=https://sandbox.push.cybird.ne.jp/XXXX</string>
    <string name="LIB_GCM_PREF_KEY_DOES_INCLUDE_SANDBOX_SUMMARY_FALSE">url=https://push.cybird.ne.jp/XXXX</string>
    <string name="LIB_GCM_PREF_KEY_DOES_INCLUDE_SANDBOX_TITLE">include sandbox in urls</string>
    <string name="LIB_GCM_PREF_KEY_IS_NORMAL">lib_gcm_is_normal</string>
    <string name="LIB_GCM_PREF_KEY_IS_NORMAL_SUMMARY_TURE">act normally</string>
    <string name="LIB_GCM_PREF_KEY_IS_NORMAL_SUMMARY_FALSE">show bundle no matter what act is</string>
    <string name="LIB_GCM_PREF_KEY_IS_NORMAL_TITLE">validate act</string>
    <string name="LIB_GCM_DIALOG_TITLE">Agreement</string>
    <string name="LIB_GCM_DIALOG_AGREE">Agree</string>
    <string name="LIB_GCM_DIALOG_DECLINE">Decline</string>
    <string name="LIB_GCM_SENDERID">54022963415</string>
    <string name="lib_launcher_close_button_text">Close</string>
    <string name="lib_launcher_blank_message">サーバへ接続できません。</string>
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_loginview_log_out_button">Log Out</string>
    <string name="com_facebook_loginview_log_in_button">Log In</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log Out</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Log In…</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logged In</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Not Logged In</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_requesterror_web_login">Please log in via https://www.facebook.com or https://m.facebook.com to re-enable the app to connect with Facebook.</string>
    <string name="com_facebook_requesterror_relogin">The app is not connected with Facebook, please log in and reconnect this app.</string>
    <string name="com_facebook_requesterror_password_changed">Your password on Facebook has changed, please reconnect the app with Facebook.</string>
    <string name="com_facebook_requesterror_reconnect">An error occurred when connecting with Facebook, please reconnect the app with Facebook.</string>
    <string name="com_facebook_requesterror_permissions">An app connection with Facebook failed due to insufficient permissions, please grant the app permissions to perform the operation.</string>
    <string name="gree_environment">sandbox</string>
    <string name="app_id">4304</string>
    <string name="app_fullname">Barcode KANOJO</string>
    <string name="app_activity_package_name">jp.co.cybird.barcodekanojo</string>
    <string name="app_name">Barcode KANOJO</string>
    <string name="debug_map_key">0xrwNkcHK1y74K1yUD8KlSGREuF0GuOimaJKhIw</string>
    <string name="map_key">0NAamX5fwF1rRbOaJS0rOFRxa1NMGvpLBADKiXw</string>
    <string name="admob_publisher_id">a1525767b1eb00c</string>
    <string name="admob_mediation_id">5c23934ba80d45d4</string>
    <string name="common_ok">OK</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_dialog_ok">OK</string>
    <string name="common_dialog_cancel">Cancel</string>
    <string name="common_progress_dialog_message">Loading...</string>
    <string name="common_edit_close">Back</string>
    <string name="common_product_kanojo_name">Name</string>
    <string name="common_product_company">Company</string>
    <string name="common_product_name">Product</string>
    <string name="common_product_category">Category</string>
    <string name="common_product_barcode">Barcode</string>
    <string name="common_product_country">Country</string>
    <string name="common_product_location">Location</string>
    <string name="common_product_photo">Photo</string>
    <string name="common_product_comment">Comment</string>
    <string name="menu_common_refresh">Refresh</string>
    <string name="edit_photo_title">Moving and scaling</string>
    <string name="edit_photo_ok">Select</string>
    <string name="edit_photo_cancel">Cancel</string>
    <string name="top_log_in">Log In</string>
    <string name="top_sign_up">Sign Up</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="sign_up_name">Name</string>
    <string name="sign_up_photo">Icon</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="log_in_btn">Log In</string>
    <string name="tab_dashboard">Dashboard</string>
    <string name="tab_enemy">Enemy Book</string>
    <string name="tab_kanojo">Kanojos</string>
    <string name="tab_map">Map</string>
    <string name="tab_scan">Scan</string>
    <string name="setting_account">Account</string>
    <string name="setting_account_change">Edit account information</string>
    <string name="setting_log_out">Log Out</string>
    <string name="setting_common">Change Sharing Setting</string>
    <string name="setting_legal">Site Policy</string>
    <string name="setting_legal_privacy">Privacy Policy</string>
    <string name="setting_legal_terms">Terms Of Use</string>
    <string name="setting_about">About</string>
    <string name="setting_about_rules">The Rules</string>
    <string name="setting_about_barcodekanojo">Barcode KANOJO</string>
    <string name="setting_about_team">Team</string>
    <string name="setting_support">Support</string>
    <string name="setting_support_mail">General</string>
    <string name="setting_support_kddi">KDDI</string>
    <string name="social_setting_singup">Sign Up</string>
    <string name="social_setting_facebook">Login with Facebook</string>
    <string name="social_setting_twister">Login with Twitter</string>
    <string name="social_setting_sukiyaID">Login with SUKIYA ID</string>
    <string name="social_setting_note1">If you register with the above network, your account will automatically be linked.</string>
    <string name="social_setting_skip_txt">For those have neither, tap here</string>
    <string name="social_setting_legal_txt">Site Policy</string>
    <string name="social_setting_privacy_policy_txt">Privacy Policy</string>
    <string name="social_setting_terms_of_use_txt">Terms Of Use</string>
    <string name="social_sukiya_connect_title">Connect to Sukiya ID</string>
    <string name="social_sukiya_id">Site Policy</string>
    <string name="social_sukiya_email">E-mail Address</string>
    <string name="social_sukiya_password">Password</string>
    <string name="social_sukiya_confirm_password">Password Confirmation</string>
    <string name="social_sukiya_note">Password</string>
    <string name="social_sukiya_submit_button_txt">Submit</string>
    <string name="social_sukiya_cancel_button_txt">Cancel</string>
    <string name="social_setting_oldID">Login with Your ID</string>
    <string name="preferences_auto_focus_title">Use auto focus</string>
    <string name="preferences_invert_scan_title">Invert scan</string>
    <string name="preferences_invert_scan_summary">Scan for white barcodes on black background. Not available on some devices.</string>
    <string name="preferences_device_bug_workarounds_title">Device Bug Workarounds</string>
    <string name="preferences_disable_continuous_focus_title">No continuous focus</string>
    <string name="preferences_disable_continuous_focus_summary">Use only standard focus mode</string>
    <string name="preferences_try_bsplus">Try Barcode Scanner+</string>
    <string name="preferences_try_bsplus_summary">Enhanced with new features and interface</string>
    <string name="menu_help">Help</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="preferences_actions_title">When a barcode is found…</string>
    <string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
    <string name="preferences_bulk_mode_title">Bulk scan mode</string>
    <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="preferences_custom_product_search_summary">Use %s as a placeholder for the product ID, and %f for format</string>
    <string name="preferences_custom_product_search_title">Custom search URL</string>
    <string name="preferences_decode_1D_title">1D barcodes</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_QR_title">QR Codes</string>
    <string name="preferences_front_light_summary">Improves scanning in low light on some phones, but may cause glare. Does not work on all phones.</string>
    <string name="preferences_front_light_title">Use front light</string>
    <string name="preferences_general_title">General settings</string>
    <string name="preferences_play_beep_title">Beep</string>
    <string name="preferences_remember_duplicates_summary">Store multiple scans of the same barcode in History</string>
    <string name="preferences_remember_duplicates_title">Remember duplicates</string>
    <string name="preferences_result_title">Result settings</string>
    <string name="preferences_scanning_title">When scanning for barcodes, decode…</string>
    <string name="preferences_supplemental_summary">Try to retrieve more information about the barcode contents</string>
    <string name="preferences_supplemental_title">Retrieve more info</string>
    <string name="preferences_vibrate_title">Vibrate</string>
</resources>