<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:EditItemView="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
        <RelativeLayout android:background="@drawable/common_title_bg" android:layout_width="match_parent" android:layout_height="@dimen/common_title_height">
            <Button android:id="@+id/signup_option_close" android:text="@string/common_edit_close" android:layout_alignParentLeft="true" style="@style/btn_navi"/>
            <ImageView android:layout_width="wrap_content" android:layout_height="@dimen/common_title_logo_height" android:src="@drawable/common_logo" android:scaleType="fitCenter" android:adjustViewBounds="true" android:layout_centerInParent="true"/>
        </RelativeLayout>
        <ScrollView android:background="@color/edit_bg" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
            <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:paddingLeft="10dp" android:paddingRight="10dp" android:layout_width="match_parent" android:layout_height="wrap_content">
                <LinearLayout android:orientation="vertical" android:id="@+id/social_setting_layout" android:layout_width="match_parent" android:layout_height="match_parent">
                    <TextView android:id="@+id/social_setting_title" android:layout_marginTop="@dimen/row_setting_margin" android:layout_marginBottom="@dimen/row_setting_margin" android:text="@string/social_setting_singup" style="@style/social_setting_title"/>
                    <jp.co.cybird.barcodekanojoForGAM.view.EditItemView android:layout_gravity="center_vertical" android:id="@+id/social_setting_facebook" android:background="@drawable/row_kanojo_edit_bg_top" android:layout_width="match_parent" android:layout_height="@dimen/row_kanojo_edit_txt_height" EditItemView:key="@string/social_setting_facebook" EditItemView:iconDrawable="@drawable/icon_fb" EditItemView:addDrawable="@drawable/blue_check"/>
                    <jp.co.cybird.barcodekanojoForGAM.view.EditItemView android:layout_gravity="center_vertical" android:id="@+id/social_setting_twitter" android:background="@drawable/row_kanojo_edit_bg_middle" android:layout_width="match_parent" android:layout_height="@dimen/row_kanojo_edit_txt_height" EditItemView:key="@string/social_setting_twister" EditItemView:textColor="@color/editable_color" EditItemView:iconDrawable="@drawable/icon_tt" EditItemView:addDrawable="@drawable/blue_check"/>
                    <jp.co.cybird.barcodekanojoForGAM.view.EditItemView android:layout_gravity="center_vertical" android:id="@+id/social_setting_oldID" android:background="@drawable/row_kanojo_edit_bg_bottom" android:visibility="visible" android:layout_width="match_parent" android:layout_height="@dimen/row_kanojo_edit_txt_height" EditItemView:key="@string/social_setting_oldID" EditItemView:textColor="@color/editable_color" EditItemView:iconDrawable="@mipmap/icon"/>
                    <jp.co.cybird.barcodekanojoForGAM.view.EditItemView android:layout_gravity="center_vertical" android:id="@+id/social_setting_sukiya" android:background="@drawable/row_kanojo_edit_bg_bottom" android:visibility="gone" android:layout_width="match_parent" android:layout_height="@dimen/row_kanojo_edit_txt_height" EditItemView:key="@string/social_setting_sukiyaID" EditItemView:textColor="@color/editable_color" EditItemView:iconDrawable="@drawable/icon_sukiya"/>
                </LinearLayout>
                <LinearLayout android:orientation="vertical" android:id="@+id/social_setting_skip_config_layout" android:layout_width="match_parent" android:layout_height="match_parent">
                    <TextView android:layout_marginTop="@dimen/row_setting_margin" android:layout_marginBottom="@dimen/row_setting_margin" android:text="@string/social_setting_note1" style="@style/social_setting_note"/>
                    <jp.co.cybird.barcodekanojoForGAM.view.EditItemView android:layout_gravity="center_vertical" android:id="@+id/social_setting_skip" android:background="@drawable/row_kanojo_edit_bg_name" android:layout_width="match_parent" android:layout_height="@dimen/row_kanojo_edit_txt_height" EditItemView:key="@string/social_setting_skip_txt" EditItemView:addDrawable="@drawable/icon_add"/>
                    <TextView android:textStyle="bold" android:layout_marginTop="@dimen/row_setting_margin" android:layout_marginBottom="@dimen/row_setting_margin" android:text="@string/social_setting_legal_txt" style="@style/social_setting_title"/>
                    <jp.co.cybird.barcodekanojoForGAM.view.EditItemView android:id="@+id/social_setting_privacy_policy" android:background="@drawable/row_kanojo_edit_bg_top" android:layout_width="match_parent" android:layout_height="@dimen/row_kanojo_edit_txt_height" EditItemView:key="@string/social_setting_privacy_policy_txt"/>
                    <jp.co.cybird.barcodekanojoForGAM.view.EditItemView android:id="@+id/social_setting_terms_of_use" android:background="@drawable/row_kanojo_edit_bg_bottom" android:layout_width="match_parent" android:layout_height="@dimen/row_kanojo_edit_txt_height" EditItemView:key="@string/social_setting_terms_of_use_txt"/>
                </LinearLayout>
                <LinearLayout android:orientation="vertical" android:id="@+id/social_setting_sukiya_layout" android:layout_width="match_parent" android:layout_height="match_parent">
                    <TextView android:textStyle="bold" android:layout_marginTop="@dimen/row_setting_margin" android:layout_marginBottom="@dimen/row_setting_margin" android:text="@string/social_sukiya_connect_title" style="@style/social_setting_title"/>
                    <jp.co.cybird.barcodekanojoForGAM.view.EditItemView android:id="@+id/social_sukiya_id" android:background="@drawable/row_kanojo_edit_bg_top" android:layout_width="match_parent" android:layout_height="@dimen/row_kanojo_edit_txt_height" EditItemView:key="@string/social_sukiya_id"/>
                    <jp.co.cybird.barcodekanojoForGAM.view.EditItemView android:id="@+id/social_sukiya_email" android:background="@drawable/row_kanojo_edit_bg_middle" android:layout_width="match_parent" android:layout_height="@dimen/row_kanojo_edit_txt_height" EditItemView:key="@string/social_sukiya_email"/>
                    <jp.co.cybird.barcodekanojoForGAM.view.EditItemView android:id="@+id/social_sukiya_passord" android:background="@drawable/row_kanojo_edit_bg_middle" android:layout_width="match_parent" android:layout_height="@dimen/row_kanojo_edit_txt_height" EditItemView:key="@string/social_sukiya_password"/>
                    <jp.co.cybird.barcodekanojoForGAM.view.EditItemView android:id="@+id/social_sukiya_confirm_password" android:background="@drawable/row_kanojo_edit_bg_bottom" android:layout_width="match_parent" android:layout_height="@dimen/row_kanojo_edit_txt_height" EditItemView:key="@string/social_sukiya_confirm_password"/>
                    <TextView android:layout_marginTop="@dimen/row_setting_margin" android:layout_marginBottom="@dimen/row_setting_margin" android:text="@string/social_sukiya_note" style="@style/social_setting_sukiya_note"/>
                    <Button android:layout_gravity="right" android:id="@+id/social_sukiya_submit_btn" android:background="@drawable/btn_sukiya_button" android:text="@string/social_sukiya_submit_button_txt" style="@style/btn_navi"/>
                    <Button android:layout_gravity="right" android:id="@+id/social_sukiya_cancel_btn" android:background="@drawable/btn_sukiya_button" android:layout_marginTop="@dimen/common_title_btn_margin" android:text="@string/social_sukiya_cancel_button_txt" style="@style/btn_navi"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <jp.co.cybird.barcodekanojoForGAM.view.CustomLoadingView android:id="@+id/loadingView" android:visibility="visible" android:layout_width="match_parent" android:layout_height="match_parent"/>
</FrameLayout>
